--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@casl/ability": "^6.7.3",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^11.0.7",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
@@ -33,6 +34,7 @@
     "@scalar/nestjs-api-reference": "^0.3.179",
     "@supercharge/request-ip": "^1.2.0",
     "argon2": "^0.41.1",
+    "bullmq": "^5.40.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "helmet": "^8.0.0",
