--- a/compose.yml
+++ b/compose.yml
@@ -10,4 +10,13 @@ services:
       - 5432:5432
     volumes:
       - ~/.docker/data/postgres:/var/lib/postgresql/data
-      
+  
+  redis:
+    image: bitnami/redis:latest
+    container_name: buscaradvogado-redis
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - 6379:6379
+    volumes:
+      - ~/.docker/data/redis:/data
