--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,21 @@ CLIENT_URL=http://localhost:3000
 
 JWT_PUBLIC_KEY=
 JWT_PRIVATE_KEY=
+
+DATABASE_URL=
+
+REDIS_HOST=
+REDIS_PORT=
+
+EMAIL_HOST=
+EMAIL_USER=
+EMAIL_PASS=
+EMAIL_FROM=
+EMAIL_PORT=
+
+S3_REGION=
+S3_ENDPOINT=
+S3_ACCESS_KEY_ID=
+S3_ACCESS_KEY_SECRET=
+S3_PRIMARY_BUCKET=
+
