--- a/compose.yml
+++ b/compose.yml
@@ -20,3 +20,16 @@ services:
       - 6379:6379
     volumes:
       - ~/.docker/data/redis:/data
+
+  s3:
+    image: bitnami/minio:latest
+    container_name: buscaradvogado-s3
+    environment:
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=minio-pass
+      - MINIO_SCHEME=http
+    ports:
+      - 9000:9000
+      - 9001:9001
+    volumes:
+      - ~/.docker/data/s3:/data
